force-app/main/default/objects/mcLOVIN_Intake_Request__c/mcLOVIN_Intake_Request__c.object-meta.xml
<CustomObject>
    <label>mcLOVIN&apos; Intake Request</label>
    <nameField>
        <displayFormat>MC-{YYYY}-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>mcLOVIN&apos; Intake Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>