force-app/main/default/objects/mcLOVIN_Intake_Request__c/fields/Created_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Created_Record_Id__c</fullName>
    <label>Created Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>