force-app/main/default/objects/mcLOVIN_Intake_Request__c/fields/Intake_Text__c.field-meta.xml
<CustomField>
    <fullName>Intake_Text__c</fullName>
    <label>Intake Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>