force-app/main/default/objects/mcLOVIN_Intake_Request__c/fields/Match_JSON__c.field-meta.xml
<CustomField>
    <fullName>Match_JSON__c</fullName>
    <label>Match JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>