force-app/main/default/objects/mcLOVIN_Intake_Request__c/fields/Missing_Fields_JSON__c.field-meta.xml
<CustomField>
    <fullName>Missing_Fields_JSON__c</fullName>
    <label>Missing Fields JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>