force-app/main/default/objects/mcLOVIN_Intake_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>mcLOVIN Intake Requests</relationshipLabel>
    <relationshipName>mcLOVINIntakeRequests</relationshipName>
    <type>Lookup</type>
</CustomField>