force-app/main/default/objects/mcLOVIN_Intake_Request__c/fields/Suggested_Action__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Action__c</fullName>
    <label>Suggested Action</label>
    <length>120</length>
    <type>Text</type>
</CustomField>