force-app/main/default/objects/mcLOVIN_Intake_Request__c/fields/Suggested_Primary_Object__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Primary_Object__c</fullName>
    <label>Suggested Primary Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>