force-app/main/default/objects/mcLOVIN_Intake_Request__c/fields/Suggested_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Record_Name__c</fullName>
    <label>Suggested Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>